# dnstool

./: Cargo.toml
chat/: Cargo.toml
dnsbench/: Cargo.toml
dnsbench/src/: main.rs  query_gen.rs
echo/: Cargo.toml
echo/src/: main.rs
forwarder/: Cargo.toml
forwarder/src/: forwarder.rs  main.rs  query.rs  udp_stream.rs
snamed/: Cargo.toml
snamed/src/: main.rs  message_gen.rs
